[package]
name = "qmp-uds-mon-manager"
version = "1.0.0"
edition = "2024"
authors = ["Adam Flott"]
description = "Unix-socket HTTP and QMP proxy for serializing access to QEMU monitors"
documentation = "https://github.com/admflott/qmp-uds-mon-manager"
publish = false
rust-version = "1.95.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/admflott/qmp-uds-mon-manager"
homepage = "https://github.com/adamflott/qmp-uds-mon-manager"
keywords = ["qemu"]

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
hyper = "1.9.0"
hyper-util = { version = "0.1.20", features = ["server", "http1", "http2", "tokio"] }
qapi = { version = "0.15.0", features = ["qmp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "io-util", "signal", "sync"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }


[profile.release]
opt-level = 3
debug = "none"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
